Change default camera

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <button id="toggleCamera">Switch Camera</button>
     
     <script>
-        let currentFacingMode = "user"; // Default to front-facing camera
+        let currentFacingMode = "environment"; // Default to front-facing camera
         const videoElement = document.getElementById("video");
         const toggleButton = document.getElementById("toggleCamera");
 
